--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
   						</a>
 				</div>
       	    <div class="collapse navbar-collapse navbar-collapse" id="myNavbar">
-        		
+        		<ul class="nav navbar-nav pull-right">
+            		<li class="active"><a href="#">HOME</a></li>
+            		<li><a href="#">CHART</a></li>
+        		</ul>
         	
    			 </div>
       </div>
